--- a/public/style.css
+++ b/public/style.css
@@ -59,3 +59,8 @@ footer {
 
 tr[double-click]:hover {
   background-color: #444; }
+
+#song-title-player {
+  position:fixed;
+  padding-left: 5px;
+}
